# Wallet-Manager

./: SQL test  docker-compose.yml  manage.py  pyproject.toml
cost_manager/: asgi.py  celery.py  settings.py  urls.py
manager/: admin.py  models.py  tasks.py  urls.py  views.py
manager/migrations/: 0001_initial.py  0002_transaction.py
nginx/: Dockerfile
web/: Dockerfile  pyproject.toml
web/cost_manager/: settings.py  urls.py  wsgi.py
web/manager/: models.py  serializer.py  tasks.py  views.py
